# python-exercises

./: README.md
rpn-calculator-functional/: pyproject.toml
rpn-calculator-functional/rpn_calculator_functional/: __init__.py
rpn-calculator-functional/tests/: test_calculator_behaviours.py  test_calculator_internals.py
