[tool.poetry]
name = "rpn-calculator-functional"
version = "0.1.0"
description = ""
authors = ["Michał Poręba <michalporeba@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.1.1"
black = "^24.2.0"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
